--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="body-content">
         <main>
             <header>
-                <a href="" class="bt-menu-header">Chat</a>
+                <a href="" class="bt-menu-header">Chat!</a>
                 <a href="" class="bt-menu-header">Home</a>
                 <a href="" class="bt-menu-header">About</a>
             </header>
