--- a/public/404.html
+++ b/public/404.html
@@ -27,7 +27,7 @@
       <h1>Sorry</h1>
       <p>The specified file was not found on this website.</p>
       <h3>Why am I seeing this?</h3>
-      <p>This page was EXPLODE... generate new chat on main page: <a href="implode.web.app"><implode class="web app"></implode></a></p>
+      <p>This page was EXPLODE... generate new chat on main page: <a href="implode.web.app"><implode class="web app">IMPLODE!</implode></a></p>
     </div>
   </body>
 </html>
