--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="" class="bt-menu-header">Home</a>
                 <a href="" class="bt-menu-header">About</a>
             </header>
-            <h1 class="page-title">Implode Chat</h1>
+            <h1 class="page-title">Implode Chat!</h1>
             <a type="button" class="bt-action-main" href="templates/implodechat.html">&#128293start now&#128293</a>
             <div class="footer">2024 - ti0aly - ImplodeChat</div>
         </main>
