na lida pra melhorar experiencia ao abrir teclado

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>ImplodeChat!</title>
 </head>
 <body>
-    <div class="body-content">
-        <main>
+    <div class="body-content" id="index-main">
+        <main >
             <header>
             </header>
             <h1 class="page-title">Implode Chat!</h1>
