--- a/public/implodechat.html
+++ b/public/implodechat.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  user-scalable=no">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>ImplodeChat!</title>
 </head>
 <body>
@@ -89,8 +89,8 @@
 
     </div>
     <script type="module" src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="module" src="../scripts/implodechat.js"></script>
-    <script type="module" src="../scripts/implodebd.js"></script>
+    <script type="module" src="scripts/implodechat.js"></script>
+    <script type="module" src="scripts/implodebd.js"></script>
 
 </body>
 </html>
