--- a/public/teclado.html
+++ b/public/teclado.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Teclado Virtual</title>
-  <link rel="stylesheet" href="../css/stylesTeclado.css">
+  <link rel="stylesheet" href="css/stylesTeclado.css">
 </head>
 <body>
 
 
 
-<script src="../scripts/scriptTeclado.js"></script>
+<script src="scripts/scriptTeclado.js"></script>
 
 </body>
 </html>
